# sensd-sers-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
apps/: app.py  theme.py  utils.py
apps/components/: __init__.py  data_loading.py  filter_ui.py  raman_sidebar.py  shared_ui.py
apps/pages/: __init__.py  feature_analysis.py  model_consistency.py  peak_diagnostics.py  phase2_classification.py  sensor_assessment.py  spectral_viewer.py
apps/tabs/: __init__.py  feature_analysis.py  model_consistency.py  peak_diagnostics.py  sensor_assessment.py  serotype_classification.py  spectra_viewer.py
example_data/Amjad - ML/: T-25-10-1-2025-S183-1-ST.xlsx  T-25-10-1-2025-S183-2-ST.xlsx  T-25-10-16-2025-S190-1-SE.xlsx  T-25-10-16-2025-S190-2-SE.xlsx  T-25-10-2-2025-S182-1-ST.xlsx  T-25-10-2-2025-S182-2-ST.xlsx  T-25-12-11-2025-S204-1-MIX.xlsx  T-25-12-11-2025-S204-2-MIX.xlsx  T-25-7-18-2025-B2-1-MIX.xlsx  T-25-7-18-2025-B2-1-SE.xlsx  T-25-7-18-2025-B2-1-ST.xlsx  T-25-7-23-2025-M9-1-SE.xlsx  T-25-7-9-2025-S142-1-ST.xlsx  T-25-7-9-2025-S142-2-ST.xlsx  T-25-9-10-2025-S179-1-ST.xlsx  T-25-9-10-2025-S179-2-ST.xlsx  T-25-9-17-2025-AM1-1-ST.xlsx  T-25-9-17-2025-AM1-2-ST.xlsx  T-26-1-28-2026-S231-1-MIX.xlsx  T-26-1-28-2026-S231-1-SE.xlsx  T-26-1-28-2026-S231-1-ST.xlsx  T-26-2-4-2026-S231-1-MIX.xlsx  T-26-2-4-2026-S231-1-SE.xlsx  T-26-2-4-2026-S231-1-ST.xlsx
legacy/: 06_experiment1_concentration_repeatability.ipynb  classification_demo.py  data_visualization copy.ipynb
(+134 files in other folders)
